unpackaged/main/default/objects/Activity/fields/cccalendar__Display_Events_Local_Timezone__c.field-meta.xml
<CustomField>
    <fullName>cccalendar__Display_Events_Local_Timezone__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check to display event&#39;s local timezone in event details</description>
    <inlineHelpText>Check to display event&#39;s local timezone in event details</inlineHelpText>
    <label>Display Event&#39;s Local Timezone</label>
    <type>Checkbox</type>
</CustomField>