unpackaged/main/default/objects/Activity/fields/cccalendar__Local_Timezone__c.field-meta.xml
<CustomField>
    <fullName>cccalendar__Local_Timezone__c</fullName>
    <description>Specify event&#39;s local timezone. Required if Display event&#39;s local timezone is checked</description>
    <inlineHelpText>Specify event&#39;s local timezone. Required if Display event&#39;s local timezone is checked</inlineHelpText>
    <label>Local Timezone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>cccalendar__IANA_Timezones</valueSetName>
    </valueSet>
</CustomField>