unpackaged/main/default/objects/Activity/fields/CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>CreatedDate__c</fullName>
    <label>Created Date</label>
    <type>DateTime</type>
</CustomField>