unpackaged/main/default/objects/Activity/fields/LastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedDate__c</fullName>
    <label>Last Modified Date</label>
    <type>DateTime</type>
</CustomField>